# HRAssistantTool

./: CMakeLists.txt  dbhandler.cpp  dbhandler.h  editrecord.cpp  editrecord.cpp.autosave  editrecord.h  editrecord.ui  example.sql  filter.cpp  filter.h  login.cpp  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  managevacancies.cpp  managevacancies.h  managevacancies.ui  newworker.cpp  newworker.h  newworker.ui  restartworkflow.cpp  restartworkflow.h  restartworkflow.ui
